# study-dictionary-metadata

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/Experiment_logger/: Data_Recorder.py
src/experiment_logger/: data_recorder.py
src/ideas/: connector.py  generator_batch.py
src/ideas/pure/: pure_snowflake.sql
utils/: export_csv.md  export_csv.sh  postgres_init.py  sqlite_hash_test.py
utils/_brainstorm_ideas/: connector.py  generator_batch.py
utils/_brainstorm_ideas/batch/: postgresql_view_benchmark.sql  sqlite_view_benchmark.sql
