[tool.poetry]
name = "study-dictionary-metadata"
version = "0.1.0"
description = ""
authors = ["akongstad <kongstad@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
