[tool.poetry]
name = "study-dictionary-metadata"
version = "0.1.0"
description = ""
authors = ["akongstad <kongstad@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.10"
duckdb = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
